--- a/css/main.css
+++ b/css/main.css
@@ -94,10 +94,23 @@ body {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
 }
 
 .link-nav.current {
   color: var(--accent-color);
+}
+
+.current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+
+  position: absolute;
+  bottom: 0;
 }
 
 .link-nav-menu {
@@ -288,7 +301,26 @@ body {
 
 .list-section-title .item {
   display: block;
+  position: relative;
 }
+
+.label {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 70px;
+
+  margin: 0;
+
+  color: var(--white);
+  background: rgba(47, 48, 58, 0.8);
+  padding-top: 27px;
+  padding-left: 83px;
+  padding-bottom: 27px;
+  padding-right: 82px;
+}
+
 .list-section-title .item:not(:last-child) {
   margin-right: 30px;
 }
