--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -121,10 +121,23 @@ header {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
 }
 
 .link-nav.current {
   color: var(--accent-color);
+}
+
+.current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+
+  position: absolute;
+  bottom: 0;
 }
 
 .header-contacts .link-header + .link-header {
@@ -225,6 +238,49 @@ header {
 .link-project:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-img {
+  position: relative;
+}
+
+.link-project:hover .label,
+.link-project:focus .label,
+.link-project:hover .project-img::after,
+.link-project:focus .project-img::after {
+  opacity: 1;
+}
+
+.label {
+  position: absolute;
+  margin: 0;
+  width: 100%;
+  max-width: 322px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--white);
+
+  z-index: 2;
+  opacity: 0;
+}
+
+.project-img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  z-index: 1;
+  opacity: 0;
 }
 
 .title-projects {
