--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -257,23 +257,22 @@ header {
 
 .project-img {
   position: relative;
+  overflow: hidden;
 }
 
 .link-project:hover .label,
 .link-project:focus .label,
 .link-project:hover .project-img::after,
 .link-project:focus .project-img::after {
-  opacity: 1;
+  transform: translateY(0);
 }
 
 .label {
   position: absolute;
   margin: 0;
-  width: 100%;
-  max-width: 322px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  padding: 62px 24px;
 
   font-weight: 400;
   font-size: 18px;
@@ -282,10 +281,8 @@ header {
   color: var(--white);
 
   z-index: 2;
-  opacity: 0;
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-img::after {
@@ -298,10 +295,8 @@ header {
   background-color: rgba(33, 150, 243, 0.9);
 
   z-index: 1;
-  opacity: 0;
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-projects {
